# common-types

./: Cargo.toml  README.md
account_lib/: Cargo.toml
account_lib/src/: lib.rs
src/: block.rs  header.rs  ipc.rs  lib.rs  main.rs  transaction.rs
src/ipc_back/: create_header.rs  mod.rs
