[package]
name = "common-types"
version = "0.1.0"
authors = ["jackoiu8722 <jackliu8722@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = { version = "0.7", default-features = false, features = ["rlp"] }
ethereum-types = "0.9.2"
keccak-hash = "0.5.0"
parity-bytes = "0.1"
rlp = "0.4.5"
parity-crypto = { version = "0.6.2", features = ["publickey"] }
hex-literal = "0.2.1"
hex = "0.4"


[dev-dependencies]
rustc-hex = "2.1.0"
